[workspace.package]
name = "dubstep"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
solana-sdk = "2.1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time"] }
dotenv = "0.15.0"
bincode = "1.3.3"
lru = "0.12.5"
rand = "0.8.5"
serde = "1.0.210"
thiserror = "1.0.64"
solana-version = "2.0.13"

[workspace]
members = [
    "gossip",
]