[package]
name = "dubstep-gossip"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-sdk = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
solana-version = { workspace = true }